--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
-.env
-.env.*.local
+# # .env
+# .env.*.local
 *.local
 
 # Editor directories and files
